Fixed projects margins on mobile

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -6,7 +6,6 @@
 }
 
 .projects .container {
-  background-image: url();
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -23,7 +22,7 @@
   gap: 2rem;
   height: 700px;
   max-width: 100%;
-  margin-bottom: 30rem;
+  margin-bottom: 40rem;
 }
 
 .project-card {
@@ -139,6 +138,7 @@
 
   .projects-grid {
     gap: 1rem;
+    margin-bottom: 50rem;
   }
 
   .project-card .info {
